--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,29 @@ p{
 }
 
 
+.caption{
+    text-align: center;
+    font-size: 20px;
 
+    animation-name: shake;
+    animation-duration: 3s;
+    animation-iteration-count:infinite;}
+@keyframes shake{
+    0%{
+        color: black;}
+
+    25%{
+        color:transparent;}
+    50%{
+        color: black;}
+    75%{
+        color: transparent;}
+    100%{
+        color: black;}
+    
+
+
+}
 
 
 
@@ -99,7 +121,7 @@ header{
     color: white;
     
     text-align :center;
-    background-image: url(https://picsum.photos/id/1045/1300/400?grayscale);
+    background-image: url(https://picsum.photos/id/1045/2550/400?grayscale);
 }
 
 
